refactorizcion de autenticacion y cambio de inicio de sesion