@@ -3,13 +3,11 @@ package com.sistema.notas.service.security;
 import com.sistema.notas.entity.security.User;
 import com.sistema.notas.respository.security.UserRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
-
-import java.util.List;
+import java.util.Collections;
 
 /**
  * Carga usuarios por email para Spring Security.
@@ -29,7 +27,7 @@ public class CustomUserDetailsService implements UserDetailsService {
         return org.springframework.security.core.userdetails.User
                 .withUsername(user.getEmail())
                 .password(user.getPasswordHash())
-                .authorities(List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name())))
+                .authorities(Collections.emptyList()) // Sin roles globales
                 .accountExpired(false)
                 .accountLocked(false)
                 .credentialsExpired(false)
